--- a/obsidian/vault/.obsidian/app.json
+++ b/obsidian/vault/.obsidian/app.json
@@ -5,5 +5,12 @@
   "newFileFolderPath": "inbox",
   "useMarkdownLinks": true,
   "promptDelete": true,
-  "showUnsupportedFiles": false
+  "showUnsupportedFiles": false,
+  "pdfExportSettings": {
+    "includeName": true,
+    "pageSize": "Letter",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
